...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWz-oy-qEa" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="C5o-G0-y7N"/>
                                                        <constraint firstAttribute="width" constant="44" id="ND1-Uz-DhP"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
...
                                <connections>
                                    <outlet property="delegate" destination="tRu-OI-9ja" id="YoS-X4-AvB"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GVb-sU-Ro0" userLabel="Backward Button">
                                <rect key="frame" x="8" y="55" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="XuH-6p-J7L"/>
                                    <constraint firstAttribute="width" constant="24" id="jkJ-RS-H9b"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
            </objects>
            <point key="canvasLocation" x="1707.6335877862596" y="-42.253521126760567"/>
        </scene>
        <!--Auth-->
        <scene sceneID="n7B-Hb-P96">
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="fZE-Ts-HKn" userLabel="Auth" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="caK-Og-aFb">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_of_Unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="9Oa-7o-gIe">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
...
